First iteration, final commit

--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -1,7 +1,8 @@
 <template name="footer">
-		<div id="footer" class="jumbotron">
+	<footer>
+	<div class="continer-fluid footer primary">
+		<div class="row">
 			<center>
-				<div class="row">
 					<div class="col-lg-3">
 						<h4>About</h4>
 						What is Study Fund? <br>
@@ -33,7 +34,8 @@
 						Pinterest <br>
 						Tumblr
 					</div>
-				</div>
 			</center>
 		</div>
+	</div>
+	</footer>
 </template>
