--- a/client/templates/signupPage.html
+++ b/client/templates/signupPage.html
@@ -1,12 +1,11 @@
 <template name="signupPage">
-  <div class="row">
-    <div class="container col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-12">
-      <div class="page-header">
-        <h1>Sign Up</h1>
-      </div>
-      <!--<div class="panel panel-default">-->
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-12">
+        <div class="page-header">
+          <h1>Sign Up</h1>
+        </div>
         <div class="well">
-
           <form role="form">
 
             <div class="form-group">
@@ -26,15 +25,9 @@
             </div>
 
             <button type="submit" class="btn btn-primary col-lg-12 col-xs-12">Sign Up!</button>
-
           </form>
-
         </div>
-        <!-- Add this for facebook login
-        <div class="panel-footer">
-        </div>
-        -->
-      <!--</div>-->
+      </div>
     </div>
   </div>
 </template>
