--- a/client/templates/head.html
+++ b/client/templates/head.html
@@ -12,6 +12,13 @@
   .navbar {
   	margin-bottom: 0px;
   }
+  .footer {
+    margin-bottom: 0px;
+    margin-top: 100px;
+    padding: 20px;
+    background-color: grey;
+
+  }
   .carousel-inner > .item > img,
   .carousel-inner > .item > a > img {
   	width: 100%;
