--- a/client/templates/projectThumbNail.html
+++ b/client/templates/projectThumbNail.html
@@ -1,44 +1,38 @@
 <template name="projectThumbNail">
 	<div class="col-md-4">
-		      <div class="thumbnail">
-		        <img src="placeholder-blue.png" alt="...">
-		        <div class="caption">
-		          <h4>Project Title</h4>
-		          <img class="img-author img-rounded" src="Musk.jpeg">
-		          Author
-		          <br>
-		          <p>Some small description about the project, in order to get backers' attention!</p>
-		          <br>
-		          <b>$1,023,234 USD</b>
-		  			<div class="progress">
-	  					<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-	    				<span class="sr-only">60% Complete</span>
-	  					</div>
+	    <div class="thumbnail">
+	    	<img src="placeholder-blue.png" alt="...">
+	        <div class="caption">
+				<h4>Project Title</h4>
+				<img class="img-author img-circle" src="placeholder-profile.png">
+				Author
+				<br>
+				<p>Some small description about the project, in order to get backers' attention!</p>
+				<br>
+				<b>$1,023,234 USD</b>
+	  			<div class="progress">
+  					<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+    				<span class="sr-only">60% Complete</span>
+  					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-3">
+						<b>60%</b>
+						<br>
+						<span>Funded</span>
 					</div>
-
-					<div class="row">
-						<div class="col-sm-3">
-							<b>60%</b>
-							<br>
-							<span>Funded</span>
-						</div>
-						<div class="col-sm-3">
-							<b>320</b>
-							<br>
-							<p>Supporters</p>
-						</div>
-						<div class="col-sm-3">
-							<b>40</b>
-							<br>
-							<p>Days Left</p>
-						</div>
-						<div class="col-sm-3">
-							<b>3294</b>
-							<br>
-							<a href="#" data-toggle="tooltip" data-placement="top" title="Save Favorite" class="btn btn-default btn-sm"><i class="fa fa-heart"></i></a>
-						</div>
+					<div class="col-sm-3">
+						<b>320</b>
+						<br>
+						<p>Supporters</p>
 					</div>
-		        </div>
-		      </div>
-		    </div>
+					<div class="col-sm-3">
+						<b>40</b>
+						<br>
+						<p>Days Left</p>
+					</div>
+				</div>
+	        </div>
+	    </div>
+	</div>
 </template>
