Finished featuredProject template
featured project template is done
cleaned up and sync our projects
still need to remove most of css from discoverLayout

--- a/client/templates/projectsLayout.html
+++ b/client/templates/projectsLayout.html
@@ -1,223 +1,81 @@
 <template name = "projectsLayout">
  <!-- featured project --> 
-
-  <div class="row row-padded row-bordered row-centered">
-    <div class="col-sm-12">
-      <div class="row m-b-lg">
-        <div class="col-sm-8 col-sm-offset-2 text-center">
-          <h3><strong>From industry leaders</strong></h3>
-          <h4 class="m-b-lg">Bootstrap Themes are built by the folks who not only brought you frameworks like <a href="getbootstrap.com" target="_blank">Bootstrap</a>, <a href="http://getskeleton.com/" target="_blank">Skeleton</a>, and <a href="http://goratchet.com/" target="_blank">Ratchet</a>, but have years of experience at innovative companies like Twitter, GitHub, Medium, and others.</h4>
-        </div>
+ <div class = "container">
+  <div class = "row">
+    <center>
+      <h1 style= "font-family: 'Benton Sans','Helvetica','sans-serif'; font-size: 40px"> New discoveries in the medical field </h1>
+    </center>
+    <hr>
+    <br>
+    <div class = "col-md-4">
+      <div class="dropdown">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"                 aria-haspopup="true" aria-expanded="true" style= "display: block; width: 100%;">
+            All Categories
+          <span class="caret"></span>  
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+          <li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li role="separator" class="divider"></li>
+          <li><a href="#">Separated link</a></li>
+        </ul>
       </div>
-      <div class="row">
-        <div class="col-md-4 m-b-lg">
-          <div class="panel panel-default panel-profile m-b-0">
-            <div class="panel-heading" style="background-image: url(//cdn.shopify.com/s/files/1/0691/5403/t/116/assets/insta-2.jpg?16964048703312813139);"></div>
-            <div class="panel-body text-center">
-              <img class="panel-profile-img" src="Musk.jpeg">
-              <h5 class="panel-title">Author</h5>
-              <p class="m-b">Finding a cure for cancer.</p>
-              <a href="/Project" class="btn btn-primary btn-sm m-b">
-                <span class="icon icon-add-user"></span> View Research
-              </a>
-              <br>
-              <br>
-              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                60%
-              </div>
-              <div class="product-footer">
-                <div class="item-price-grid pull-left">
-                  <ul class = "featureProjectInfo">
-                    <li><h3>$ 6,789</h3>
-                    <span>$10,000 goal</span></li>
-                    <li><h3>345</h3>
-                    <span>donators</span></li>
-                    <li><h3>12</h3>
-                    <span>days left</span></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="item-action-grid pull-right pull-down">
-                  <ul>
-                      <li><a href="#" data-toggle="tooltip" data-placement="top" title="Save Favorite" class="btn btn-default btn-sm"><i class="fa fa-heart"></i></a></li>
-                      <li><a href="detail.html" data-toggle="tooltip" data-placement="top" title="Show Details" class="btn btn-success btn-sm"><i class="fa fa-eye"></i></a></li>
-                  </ul>
-              </div>
-            </div>
-          </div>
-        </div>
+    </div>
+    <div class = "col-md-4">
+      <div class="dropdown">
+        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"                    aria-haspopup="true" aria-expanded="true" style= "display: block; width: 100%;">
+          Dropdown
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+          <li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li role="separator" class="divider"></li>
+          <li><a href="#">Separated link</a></li>
+        </ul>
+      </div>
+    </div>
 
-        <div class="col-md-4 m-b-lg">
-          <div class="panel panel-default panel-profile m-b-0">
-            <div class="panel-heading" style="background-image: url(//cdn.shopify.com/s/files/1/0691/5403/t/116/assets/insta-1.jpg?16964048703312813139);"></div>
-            <div class="panel-body text-center">
-              <img class="panel-profile-img" src="leo.jpg">
-              <h5 class="panel-title">Author</h5>
-              <p class="m-b">Description.</p>
-              <a href="/Project" class="btn btn-primary btn-sm m-b">
-                <span class="icon icon-add-user"></span> View Research
-              </a>
-              <br>
-              <br>
-              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                60%
-              </div>
-              <div class="product-footer">
-                <div class="item-price-grid pull-left">
-                  <ul class = "featureProjectInfo">
-                    <li><h3>$ 6,789</h3>
-                    <span>$10,000 goal</span></li>
-                    <li><h3>345</h3>
-                    <span>donators</span></li>
-                    <li><h3>12</h3>
-                    <span>days left</span></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="item-action-grid pull-right pull-down">
-                  <ul>
-                      <li><a href="#" data-toggle="tooltip" data-placement="top" title="Save Favorite" class="btn btn-default btn-sm"><i class="fa fa-heart"></i></a></li>
-                      <li><a href="detail.html" data-toggle="tooltip" data-placement="top" title="Show Details" class="btn btn-success btn-sm"><i class="fa fa-eye"></i></a></li>
-                  </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4 m-b-lg">
-          <div class="panel panel-default panel-profile m-b-0">
-            <div class="panel-heading" style="background-image: url(//cdn.shopify.com/s/files/1/0691/5403/t/116/assets/insta-1.jpg?16964048703312813139);"></div>
-            <div class="panel-body text-center">
-              <img class="panel-profile-img" src="Brad-Pitt.jpg">
-              <h5 class="panel-title">Author</h5>
-              <p class="m-b">Description.</p>
-              <a href="/Project" class="btn btn-primary btn-sm m-b">
-                <span class="icon icon-add-user"></span> View Research
-              </a>
-              <br>
-              <br>
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
-                  80%
-                </div>
-              
-              <div class="product-footer">
-                <div class="item-price-grid pull-left">
-                  <ul class = "featureProjectInfo">
-                    <li><h3>$ 6,789</h3>
-                    <span>$10,000 goal</span></li>
-                    <li><h3>345</h3>
-                    <span>donators</span></li>
-                    <li><h3>12</h3>
-                    <span>days left</span></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="item-action-grid pull-right pull-down">
-                  <ul>
-                      <li><a href="#" data-toggle="tooltip" data-placement="top" title="Save Favorite" class="btn btn-default btn-sm"><i class="fa fa-heart"></i></a></li>
-                      <li><a href="detail.html" data-toggle="tooltip" data-placement="top" title="Show Details" class="btn btn-success btn-sm"><i class="fa fa-eye"></i></a></li>
-                  </ul>
-              </div>
-            </div>
-          </div>
-        </div>
+    <div class = "col-md-4">
+      <div class="dropdown">
+        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"                    aria-haspopup="true" aria-expanded="true" style= "display: block; width: 100%;">
+          Trending
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+          <li><a href="#">New</a></li>
+          <li><a href="#">Ending soon</a></li>
+          <li><a href="#">Needs help</a></li>
+          <li role="separator" class="divider"></li>
+          <li><a href="#">Most Funded</a></li>
+        </ul>
       </div>
     </div>
   </div>
- 
-  <style type="text/css">
-  .panel-profile .panel-title{
-    margin-bottom:5px
-  }
-  .panel-profile .panel-heading{
-    height:200px;background-size:cover
-  }
-  .panel-profile-img{
-    max-width:25%;margin-top:-70px;
-    margin-bottom:5px;
-    border:3px solid #fff;
-    border-radius:100%;
-    box-shadow:0 1px 1px rgba(0,0,0,0.1)
-  }
-  .panel-menu{
-    list-style:none;padding:0
-  }
-  .panel-menu-item{
-    display:inline-block;
-    padding:0 10px;
-    border-right:1px solid var(--colorGrayLighter)
-  }
+  <br>
+  <div class="section-header">
+        <h2>Featured</h2>
+  </div>
+  {{>featuredProject}}
 
-  .pull-down{
-    margin-top: 10%;
-  }
-  .counter{
-    padding: 20px 0;
-    background: #58b325;
-    color: #FFF;
-    text-align: center;
-    text-transform: uppercase;
-  }
+  <div class="row">
+    {{>projectThumbNail}}
+    {{>projectThumbNail}}
+    {{>projectThumbNail}}
+  </div>
 
-  .item-price-grid{
-      text-align: center;
-       position: relative;
-       margin-left: -5%;
-  }
+  <center>
+    <a href="" data-toggle="tooltip" data-placement="top" title="Save Favorite" class="btn btn-default btn-md">Load More</a>
+  </center>
+</div>
 
-  .item-price-grid h3{
-      font-weight: 300;
-      font-size: 100%;
-  }
+<style type="text/css">
 
-  .item-price-grid span{
-      color: #4F8A10;
-      font-size: 70%;
-  }
-  .item-action ul{
-      list-style: none;
-      padding: 0;
-  }
+.row{
+  margin-top: 9%;
+}
+</style>
 
-  .item-action ul li{
-      display: inline-block;
-      font-size: 12px;
-      color: #BBB;
-  }
-  .product-footer{
-      height: 35px;
-      padding-top: 2%;
-      border-top: 1px solid #DDD;
-  }
-  .featureProjectInfo li{
-      display: inline;
-      float: left;
-      background-position: 100% .4em;
-      padding-right: 3em;
-      margin: 2em 0;
-  }
-  .item-action-grid ul{
-      list-style: none;
-      padding: 0;
-  }
-  .item-action-grid ul li{
-      display: inline;
-      font-size: 12px;
-      color: #BBB;
-  }
-
-  @media (max-width:767px) {
-    .footer ul {
-      float: none;
-      padding: 0;
-      text-align: center;
-      width: 100%;
-    }
-
-    .footer ul:last-child {
-      margin-top: 20px;
-    }
-  }
-
-  </style>
 </template>
