--- a/client/stylesheets/custom-styles.css
+++ b/client/stylesheets/custom-styles.css
@@ -1,6 +1,6 @@
 .footer {
   margin-bottom: 0px;
-  margin-top: 100px;
-  padding: 20px;
+  margin-top: 3%;
+  padding: 3%;
   background-color: grey;
 }
