--- a/client/templates/discoverLayout.html
+++ b/client/templates/discoverLayout.html
@@ -3,6 +3,9 @@
     <section class="main">
         <div class="container">
             <div class="row">
+                <center><h1 style= "font-family: 'Benton Sans','Helvetica','sans-serif'; font-size: 40px"> Fund your favourite research </h1></center>
+                <hr>
+                <br>
                 <div class="col-md-8 col-sm-8">
                     <div class="row">
                         <div class="col-xs-4 col-sm-3">
@@ -62,203 +65,18 @@
                             </div>  
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="section-header">
-                                <h2>Featured</h2>
-                            </div>
-                            <div id="featured-products" class="owl-carousel owl-carousel-featured">
-                                <div class="item">
-                                    <div class="item-ads-grid">
-                                        <div class="item-img-grid">
-                                          <a href="/Project">  <img alt="Project" src="Medical_Small.jpg" class="img-responsive img-center"></a>
-                                        </div>
-                                        <div class="item-title">
-                                            <a href="/Project"><h4>Project One</h4></a>
-                                        </div>
-                                        <div class="item-meta">
-                                            <ul>
-                                                <li class="item-date"><i class="fa fa-clock-o"></i> Today 10:35 am</li>
-                                                <li class="item-cat"><i class="fa fa-bars"></i> <a href="/Projects">Medical</a> , <a href="#topicPage">Cancer Research</a></li>
-                                                <li class="item-location"><a href="category.html"><i class="fa fa-map-marker"></i> City</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                                          60%
-                                        </div>
-                                        <div class="product-footer">
-                                            <div class="item-price-grid pull-left">
-                                              <ul class = "featureProjectInfo">
-                                                <li><h3>$ 6,789</h3>
-                                                <span>pledged of a $10,000 goal</span></li>
-                                                <li><h3>60%</h3>
-                                                <span>funded</span></li>
-                                                <li><h3>345</h3>
-                                                <span>donators</span></li>
-                                                <li><h3>12</h3>
-                                                <span>days to go</span></li>
-                                              </ul>
-                                            </div>
-                                            <div class="item-action-grid pull-right">
-                                                <ul>
-                                                    <li><a href="#" data-toggle="tooltip" data-placement="top" title="Save Favorite" class="btn btn-default btn-sm"><i class="fa fa-heart"></i></a></li>
-                                                    <li><a href="detail.html" data-toggle="tooltip" data-placement="top" title="Show Details" class="btn btn-success btn-sm"><i class="fa fa-eye"></i></a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>   
-                                </div>
-
-                                <div class="item">
-                                    <div class="item-ads-grid">
-                                        <div class="item-img-grid">
-                                          <a href="/Project">  <img alt="Project" src="Medical_Small.jpg" class="img-responsive img-center"></a>
-                                        </div>
-                                        <div class="item-title">
-                                            <a href="/Project"><h4>Project One</h4></a>
-                                        </div>
-                                        <div class="item-meta">
-                                            <ul>
-                                                <li class="item-date"><i class="fa fa-clock-o"></i> Today 10:35 am</li>
-                                                <li class="item-cat"><i class="fa fa-bars"></i> <a href="/Projects">Medical</a> , <a href="#topicPage">Cancer Research</a></li>
-                                                <li class="item-location"><a href="category.html"><i class="fa fa-map-marker"></i> City</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                                          60%
-                                        </div>
-                                        <div class="product-footer">
-                                            <div class="item-price-grid pull-left">
-                                              <ul class = "featureProjectInfo">
-                                                <li><h3>$ 6,789</h3>
-                                                <span>pledged of a $10,000 goal</span></li>
-                                                <li><h3>60%</h3>
-                                                <span>funded</span></li>
-                                                <li><h3>345</h3>
-                                                <span>donators</span></li>
-                                                <li><h3>12</h3>
-                                                <span>days to go</span></li>
-                                              </ul>
-                                            </div>
-                                            <div class="item-action-grid pull-right">
-                                                <ul>
-                                                    <li><a href="#" data-toggle="tooltip" data-placement="top" title="Save Favorite" class="btn btn-default btn-sm"><i class="fa fa-heart"></i></a></li>
-                                                    <li><a href="detail.html" data-toggle="tooltip" data-placement="top" title="Show Details" class="btn btn-success btn-sm"><i class="fa fa-eye"></i></a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>   
-                                </div>
-
-                                <div class="item">
-                                    <div class="item-ads-grid highlight-ads">
-                                        <div class="item-img-grid">
-                                          <a href="/Project">  <img alt="Project" src="Medical_Small.jpg" class="img-responsive img-center"></a>
-                                        </div>
-                                        <div class="item-title">
-                                            <a href="/Project"><h4>Project One</h4></a>
-                                        </div>
-                                        <div class="item-meta">
-                                            <ul>
-                                                <li class="item-date"><i class="fa fa-clock-o"></i> Today 10:35 am</li>
-                                                <li class="item-cat"><i class="fa fa-bars"></i> <a href="/Projects">Medical</a> , <a href="#topicPage">Cancer Research</a></li>
-                                                <li class="item-location"><a href="category.html"><i class="fa fa-map-marker"></i> City</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                                          60%
-                                        </div>
-                                        <div class="product-footer">
-                                            <div class="item-price-grid pull-left">
-                                              <ul class = "featureProjectInfo">
-                                                <li><h3>$ 6,789</h3>
-                                                <span>pledged of a $10,000 goal</span></li>
-                                                <li><h3>60%</h3>
-                                                <span>funded</span></li>
-                                                <li><h3>345</h3>
-                                                <span>donators</span></li>
-                                                <li><h3>12</h3>
-                                                <span>days to go</span></li>
-                                              </ul>
-                                            </div>
-                                            <div class="item-action-grid pull-right">
-                                                <ul>
-                                                    <li><a href="#" data-toggle="tooltip" data-placement="top" title="Save Favorite" class="btn btn-default btn-sm"><i class="fa fa-heart"></i></a></li>
-                                                    <li><a href="detail.html" data-toggle="tooltip" data-placement="top" title="Show Details" class="btn btn-success btn-sm"><i class="fa fa-eye"></i></a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>   
-                                </div>
-
-                                <div class="item">
-                                    <div class="item-ads-grid">
-                                        <div class="item-badge-grid hot-ads">
-                                            <a href="#">featured</a>
-                                        </div>
-                                        <div class="item-img-grid">
-                                          <a href="/Project">  <img alt="Project" src="Medical_Small.jpg" class="img-responsive img-center"></a>
-                                        </div>
-                                        <div class="item-title">
-                                            <a href="/Project"><h4>Project One</h4></a>
-                                        </div>
-                                        <div class="item-meta">
-                                            <ul>
-                                                <li class="item-date"><i class="fa fa-clock-o"></i> Today 10:35 am</li>
-                                                <li class="item-cat"><i class="fa fa-bars"></i> <a href="/Projects">Medical</a> , <a href="#topicPage">Cancer Research</a></li>
-                                                <li class="item-location"><a href="category.html"><i class="fa fa-map-marker"></i> City</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                                          60%
-                                        </div>
-                                        <div class="product-footer">
-                                            <div class="item-price-grid pull-left">
-                                              <ul class = "featureProjectInfo">
-                                                <li><h3>$ 6,789</h3>
-                                                <span>pledged of a $10,000 goal</span></li>
-                                                <li><h3>60%</h3>
-                                                <span>funded</span></li>
-                                                <li><h3>345</h3>
-                                                <span>donators</span></li>
-                                                <li><h3>12</h3>
-                                                <span>days to go</span></li>
-                                              </ul>
-                                            </div>
-                                            <div class="item-action-grid pull-right">
-                                                <ul>
-                                                    <li><a href="#" data-toggle="tooltip" data-placement="top" title="Save Favorite" class="btn btn-default btn-sm"><i class="fa fa-heart"></i></a></li>
-                                                    <li><a href="detail.html" data-toggle="tooltip" data-placement="top" title="Show Details" class="btn btn-success btn-sm"><i class="fa fa-eye"></i></a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>   
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-4">
-                    <div class="widget">
-                        <div class="widget-header">
-                            <h3>Favourites</h3>
-                        </div>
-                        <div class="widget-body">
-                            <ul class="trends">
-                                <li><a href="#">Cancer Research &nbsp;<span class="item-numbers">(2,342)</span></a></li>
-                                <li><a href="#">Pharmaceutical &nbsp;<span class="item-numbers">(2,342)</span></a></li>
-                                <li><a href="#">Topic 3 &nbsp;<span class="item-numbers">(2,342)</span></a></li>
-                                <li><a href="#">Topic 4 &nbsp;<span class="item-numbers">(2,342)</span></a></li>
-                                <li><a href="#">Topic 5 &nbsp;<span class="item-numbers">(2,342)</span></a></li>
-                                <li><a href="#">Topic 6 &nbsp;<span class="item-numbers">(2,342)</span></a></li>
-                                <li><a href="#">Topic 7 &nbsp;<span class="item-numbers">(242)</span></a></li>
-                                <li><a href="#">Topic 8 &nbsp;<span class="item-numbers">(2,342)</span></a></li>
-                            </ul>
-                        </div>
-                    </div>
                 </div>
             </div>
+            
+                <div class="section-header">
+                    <h2>Featured</h2>
+                </div>
+                {{>featuredProject}}
+                {{>featuredProject}}
+                {{>featuredProject}}
+
         </div>
+        
     </section>
     <div class="counter">
         <div class="container">
@@ -293,22 +111,9 @@
                 </div>
             </div>
         </div> <!-- / .counter -->
-      </div>
-      <div class="footer">
-          <div class="container">
-          <ul class="pull-left footer-menu">
-              <li>
-                  <a href="/"> Home </a>
-                  <a href="about.html"> About us </a>
-                  <a href="contact.html"> Contact us </a>
-              </li>
-          </ul>
-          <ul class="pull-right footer-menu">
-              <li> &copy; 2015 StudyFund </li>
-          </ul>
-          </div>
-      </div>
-  </div>
+    </div>
+          
+</div>
 
 <style type="text/css">
 
