--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -7,7 +7,9 @@
 						<h4>About</h4>
 						What is Study Fund? <br>
 						Jobs <br>
-						Press
+						Press <br>
+			            &copy; 2015 StudyFund 
+			          
 					</div>
 					<div class="col-lg-3">
 						<h4>Help</h4>
