--- a/client/templates/projectPage.html
+++ b/client/templates/projectPage.html
@@ -1,52 +1,49 @@
 <template name = "projectPage">
-	<center>
-		<div class = "projectContainer">
-			<div class = "projectName">
-				<div class = "author">
-					<div class = "projectVideo">
+	<div class = "container">
+		<div class = "row">
 
+			<div class="col-md-6">
+				<img src="placeholder-blue.png" alt="..." class="img-responsive">
+
+			</div>
+
+			<div class="col-md-6">
+				<h4>Project Title</h4>
+	          <img class="img-author img-circle" src="Musk.jpeg">
+	          Author
+	          <br>
+	          <p>Some small description about the project, in order to get backers' attention!</p>
+	          <br>
+	          <b>$1,023,234 USD</b>
+	  			<div class="progress">
+  					<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+    				<span class="sr-only">60% Complete</span>
+  					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-sm-3">
+						<b>60%</b>
+						<br>
+						<span>Funded</span>
 					</div>
-					<div class = "backers">
-						100
-						<span>backers</span>
-					</div>			
-					<div class = "amountPledged">
-						$6789
-						<span>pledged of $50,000 goal</span>
+					<div class="col-sm-3">
+						<b>320</b>
+						<br>
+						<p>Supporters</p>
 					</div>
-					<div class = "DaysLeft">
-						30
-						<span>days to go</span>
+					<div class="col-sm-3">
+						<b>40</b>
+						<br>
+						<p>Days Left</p>
+					</div>
+					<div class="col-sm-3">
+						<b>3294</b>
+						<br>
+						<a href="" data-toggle="tooltip" data-placement="top" title="like" class="btn btn-default btn-sm"><i class="fa fa-heart"></i></a>
 					</div>
 				</div>
 			</div>
-			<!-- / Twitter  -->
-			<div class="twitter inline-block">
-			<a class="js-twitter-share project-share__btn" href="https://twitter.com/intent/tweet?text=%22An%20Equal%20Difference%22%20Intellect%20%26%20Gender%20Equality%20in%20Iceland%20is%20popular%20on%20%40Kickstarter%21&amp;url=http%3A%2F%2Fkck.st%2F1POutHO" rel="nofollow"><svg aria-hidden="true" class="svg-icon__twitter project-share__icon"><use xlink:href="#twitter"></use></svg>
-			<b>Tweet</b>
-			</a></div>
-			<!-- / Facebook -->
-			<div class="facebook inline-block">
-			<a class="js-facebook-share project-share__btn" data-facebook-shares-url="/projects/gmotophotos/an-equal-difference-intellect-and-gender-equality/facebook_share_count" href="https://www.kickstarter.com/projects/gmotophotos/an-equal-difference-intellect-and-gender-equality?ref=project_share"><svg aria-hidden="true" class="svg-icon__facebook-box project-share__icon"><use xlink:href="#facebook-box"></use></svg>
-			<b>Share</b>
-			</a></div>
-			<!-- / Embed  -->
-			<div class="embed inline-block">
-			<a class="remote_modal_dialog js-embed-share project-share__btn" data-modal-title="Embed a widget on your site" data-tracker-name="Embed" href="/projects/gmotophotos/an-equal-difference-intellect-and-gender-equality/widget"><svg aria-hidden="true" class="svg-icon__embed project-share__icon"><use xlink:href="#embed"></use></svg>
-			<b>Embed</b>
-			</a></div>
-			<!-- / Pinterest  -->
-			<div class="pinterest inline-block">
-			<button class="js-pinterest-share pinterest-share project-share__btn">
-			<svg aria-hidden="true" class="svg-icon__pinterest project-share__icon"><use xlink:href="#pinterest"></use></svg>
-			<b>Pin</b>
-			</button>
-			</div>
-			<!-- / Tumblr  -->
-			<div class="tumblr inline-block">
-			<a class="js-tumblr-share project-share__btn" href="https://www.tumblr.com/share/video?embed=https%3A%2F%2Fwww.kickstarter.com%2Fprojects%2Fgmotophotos%2Fan-equal-difference-intellect-and-gender-equality&amp;caption=%22An%20Equal%20Difference%22%20Intellect%20%26%20Gender%20Equality%20in%20Iceland+-+For%20a%20world%20drowning%20in%20inequality.%20A%20%E2%80%98photo%20storybook%E2%80%99%20of%20tales%20and%20ideas%20from%20Iceland%2C%20a%20land%20of%20gender%20equality.%20Well%2C%20almost.+-+http%3A%2F%2Fkck.st%2F1POutHS" rel="nofollow"><svg aria-hidden="true" class="svg-icon__tumblr project-share__icon"><use xlink:href="#tumblr"></use></svg>
-			<b>Post</b>
-			</a></div>
-		</div>
-	</center>
+		</div>	
+	</div>
 </template>
