--- a/client/templates/projectThumbNail.html
+++ b/client/templates/projectThumbNail.html
@@ -7,14 +7,17 @@
 				<img class="img-author img-circle" src="placeholder-profile.png">
 				Author
 				<br>
+				<br>
 				<p>Some small description about the project, in order to get backers' attention!</p>
 				<br>
 				<b>$1,023,234 USD</b>
+
 	  			<div class="progress">
   					<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
     				<span class="sr-only">60% Complete</span>
   					</div>
 				</div>
+
 				<div class="row">
 					<div class="col-sm-3">
 						<b>60%</b>
@@ -25,6 +28,7 @@
 						<b>320</b>
 						<br>
 						<p>Supporters</p>
+
 					</div>
 					<div class="col-sm-3">
 						<b>40</b>
@@ -35,4 +39,11 @@
 	        </div>
 	    </div>
 	</div>
+
+    <style type="text/css">
+	.img-author {
+		max-width: 15%;
+	}
+	</style>
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 </template>
