--- a/client/templates/discoverLayout.html
+++ b/client/templates/discoverLayout.html
@@ -1,83 +1,80 @@
 <template name = "discoverLayout">   
-  <div class="wrapper">
-    <section class="main">
-        <div class="container">
-            <div class="row">
-                <center><h1 style= "font-family: 'Benton Sans','Helvetica','sans-serif'; font-size: 40px"> Fund your favourite research </h1></center>
-                <hr>
-                <br>
-                <div class="col-md-8 col-sm-8">
-                    <div class="row">
-                        <div class="col-xs-4 col-sm-3">
-                            <div class="shortcut">
-                                <a href="/projects"><i class="fa fa-medkit shortcut-icon icon-red"></i></a>
-                                <a href="/projects"><h3>Medical</h3></a>
-                                <span class="total-items">234,567</span>
-                            </div>
+    <div class="container bodycontainer">
+        <div class="row">
+            <center><h1 style= "font-family: 'Benton Sans','Helvetica','sans-serif'; font-size: 40px"> Fund your favourite research </h1></center>
+            <hr>
+            <br>
+            <div class="col-md-8 col-sm-8">
+                <div class="row">
+                    <div class="col-xs-4 col-sm-3">
+                        <div class="shortcut">
+                            <a href="/projects"><i class="fa fa-medkit shortcut-icon icon-red"></i></a>
+                            <a href="/projects"><h3>Medical</h3></a>
+                            <span class="total-items">234,567</span>
                         </div>
-                        <div class="col-xs-4 col-sm-3">
-                            <div class="shortcut">
-                                <a href="/projects"><i class="fa fa-camera shortcut-icon icon-green"></i></a>
-                                <a href="/projects"><h3>Photography</h3></a>
-                                <span class="total-items">25,366</span>
-                            </div>
+                    </div>
+                    <div class="col-xs-4 col-sm-3">
+                        <div class="shortcut">
+                            <a href="/projects"><i class="fa fa-camera shortcut-icon icon-green"></i></a>
+                            <a href="/projects"><h3>Photography</h3></a>
+                            <span class="total-items">25,366</span>
                         </div>
-                        <div class="col-xs-4 col-sm-3">
-                            <div class="shortcut">
-                                <a href="/projects"><i class="fa fa-male shortcut-icon icon-brown"></i></a>
-                                <a href="/projects"><h3>Physiology</h3></a>
-                                <span class="total-items">252,546</span>
-                            </div>
+                    </div>
+                    <div class="col-xs-4 col-sm-3">
+                        <div class="shortcut">
+                            <a href="/projects"><i class="fa fa-male shortcut-icon icon-brown"></i></a>
+                            <a href="/projects"><h3>Physiology</h3></a>
+                            <span class="total-items">252,546</span>
                         </div>
-                        <div class="col-xs-4 col-sm-3">
-                            <div class="shortcut">
-                                <a href="/projects"><i class="fa fa-female shortcut-icon icon-violet"></i></a>
-                                <a href="/projects"><h3>Fashion</h3></a>
-                                <span class="total-items">52,546</span>
-                            </div>
+                    </div>
+                    <div class="col-xs-4 col-sm-3">
+                        <div class="shortcut">
+                            <a href="/projects"><i class="fa fa-female shortcut-icon icon-violet"></i></a>
+                            <a href="/projects"><h3>Fashion</h3></a>
+                            <span class="total-items">52,546</span>
                         </div>
-                        <div class="col-xs-4 col-sm-3">
-                            <div class="shortcut">
-                                <a href="/projects"><i class="fa fa-spoon shortcut-icon icon-dark-blue"></i></a>
-                                <a href="/projects"><h3>Nutrition</h3></a>
-                                <span class="total-items">215,546</span>
-                            </div>
+                    </div>
+                    <div class="col-xs-4 col-sm-3">
+                        <div class="shortcut">
+                            <a href="/projects"><i class="fa fa-spoon shortcut-icon icon-dark-blue"></i></a>
+                            <a href="/projects"><h3>Nutrition</h3></a>
+                            <span class="total-items">215,546</span>
                         </div>
-                        <div class="col-xs-4 col-sm-3">
-                            <div class="shortcut">
-                                <a href="/projects"><i class="fa fa-space-shuttle shortcut-icon icon-light-blue"></i></a>
-                                <a href="/projects"><h3>Engineering</h3></a>
-                                <span class="total-items">415,546</span>
-                            </div>  
-                        </div>
-                        <div class="col-xs-4 col-sm-3">
-                            <div class="shortcut">
-                                <a href="/projects"><i class="fa fa-graduation-cap shortcut-icon icon-black"></i></a>
-                                <a href="/projects"><h3>Education</h3></a>
-                                <span class="total-items">15,546</span>
-                            </div>  
-                        </div>
-                        <div class="col-xs-4 col-sm-3">
-                            <div class="shortcut">
-                                <a href="/projects"><i class="fa fa-wrench shortcut-icon icon-light-green"></i></a>
-                                <a href="/projects"><h3>Other</h3></a>
-                                <span class="total-items">152,546</span>
-                            </div>  
-                        </div>
+                    </div>
+                    <div class="col-xs-4 col-sm-3">
+                        <div class="shortcut">
+                            <a href="/projects"><i class="fa fa-space-shuttle shortcut-icon icon-light-blue"></i></a>
+                            <a href="/projects"><h3>Engineering</h3></a>
+                            <span class="total-items">415,546</span>
+                        </div>  
+                    </div>
+                    <div class="col-xs-4 col-sm-3">
+                        <div class="shortcut">
+                            <a href="/projects"><i class="fa fa-graduation-cap shortcut-icon icon-black"></i></a>
+                            <a href="/projects"><h3>Education</h3></a>
+                            <span class="total-items">15,546</span>
+                        </div>  
+                    </div>
+                    <div class="col-xs-4 col-sm-3">
+                        <div class="shortcut">
+                            <a href="/projects"><i class="fa fa-wrench shortcut-icon icon-light-green"></i></a>
+                            <a href="/projects"><h3>Other</h3></a>
+                            <span class="total-items">152,546</span>
+                        </div>  
                     </div>
                 </div>
             </div>
-            
-                <div class="section-header">
-                    <h2>Featured</h2>
-                </div>
-                {{>featuredProject}}
-                {{>featuredProject}}
-                {{>featuredProject}}
-
         </div>
         
-    </section>
+            <div class="section-header">
+                <h2>Featured</h2>
+            </div>
+            {{>featuredProject}}
+            {{>featuredProject}}
+            {{>featuredProject}}
+
+    </div> <!-- container -->
+        
     <div class="counter">
         <div class="container">
             <div class="row">
@@ -113,7 +110,6 @@
         </div> <!-- / .counter -->
     </div>
           
-</div>
 
 <style type="text/css">
 
@@ -137,68 +133,7 @@ a{
     padding: 20px;
     border-radius: 5px;
 }
-.icon-blue{
-    color: #09639E;
-}
 
-.icon-blue:hover{
-    color: #04568C;
-}
-
-.icon-green{
-    color: #99cc33;
-}
-.icon-green:hover{
-    color: #93C42F;
-}
-
-.icon-brown{
-    color: #855410;
-}
-
-.icon-brown:hover{
-    color: #633C06;
-}
-
-.icon-violet{
-    color: #C406B4;
-}
-
-.icon-violet:hover{
-    color: #B007A2;
-}
-
-.icon-dark-blue{
-    color: #0C1D6B;
-}
-
-.icon-dark-blue:hover{
-    color: #07175E;
-}
-
-.icon-orange{
-    color: #F57F0A;
-}
-
-.icon-orange:hover{
-    color: #D46D06;
-}
-
-.icon-light-blue{
-    color: #1BA7DE;
-}
-
-.icon-light-blue:hover{
-    color: #158DBD;
-}
-
-.icon-light-green{
-    color: #149C7E;
-}
-
-.icon-light-green:hover{
-    color: #098066;
-}
 .item-icon{
     margin-bottom: 20px;
     font-size: 40px;
@@ -211,43 +146,7 @@ a{
     text-align: center;
     text-transform: uppercase;
 }
-.widget, .post, .box-content{
-    background: #FFF;
-    padding: 15px;
-    border: 1px solid #DDD;
-    border-radius: 5px;
-    margin-bottom: 20px;
-}
 
-.widget h2,h3{
-    margin: 0;
-}
-
-.widget h3{
-    font-size: 15px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #58b325;
-}
-
-.widget-header{
-    border-bottom: 1px solid #E7E7E7;
-    padding-bottom: 10px;
-}
-
-.widget-body{
-    padding-top: 10px;
-}
-
-.widget-body ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.widget-body ul li{
-    padding: 3px 0;
-}
 
 .item-numbers{
     font-size: 13px;
@@ -263,160 +162,9 @@ a{
     font-weight: 700;
 }
 
-.featureProjectInfo li{
-    display: inline;
-    float: left;
-    background-position: 100% .4em;
-    padding-right: 3em;
-    margin: 2em 0;
-}
 .total-items{
     font-size: 12px;
     color: #CCC;
-}
-.owl-carousel .item{
-    margin: 3px;
-}
-.product-footer{
-    height: 35px;
-    padding-top: 2%;
-    border-top: 1px solid #DDD;
-}
-.img-center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
- }
-
-.item-img img{
-    height: 100px;
-    text-align: center;
-}
-/*Grid*/
-.item-img-grid img{
-    height: 150px;
-    text-align: center;
-}
-
-.item-badge-grid{
-    top: 10%;
-    box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
-    left: -15%;
-    position: absolute;
-    transform: rotate(-45deg);
-    z-index: 3;
-    width: 175px;
-}
-
-.item-badge-grid a{
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    color: #fff;
-    display: block;
-    font-size: 11px;
-    font-weight: bold;
-    text-align: center;
-    /*text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);*/
-    text-transform: uppercase;
-    transition: all 0.3s ease 0s;
-}
-
-.item-ads-grid{
-    padding: 10px;
-    border: 1px solid #DDD;
-    margin-bottom: 20px;
-    background-color: #FFF;
-    overflow: hidden !important;
-    position:relative;
-    min-height: 390px;
-}
-
-.item-action-grid ul{
-    list-style: none;
-    padding: 0;
-}
-.item-action-grid ul li{
-    display: inline;
-    font-size: 12px;
-    color: #BBB;
-}
-
-/*============Footer=================*/
-.footer {
-  background: #fff;
-  border-top: solid 1px #ddd;
-  padding: 30px 0;
-  font-size: 12px;
-  color: #4e575d;
-  letter-spacing: 0.5px;
-}
-
-.footer ul{
-    list-style: none;
-    padding: 0;
-}
-
-.footer-menu li a {
-  border-left: 1px solid #ddd;
-  color: #4e575d;
-  font-size: 12px;
-  padding: 0 10px;
-  text-transform: uppercase;
-}
-
-.footer-menu li a:first-child {
-  border-left: 0;
-}
-
-.highlight-ads{
-    background: #fff7c5 !important;
-}
-
-.item-ads{
-    padding: 10px 5px;
-    border: 1px solid #DDD;
-    margin-bottom: 5px;
-    background-color: #FFF;
-    overflow: hidden;
-}
-
-
-.item-meta ul{
-    list-style: none;
-    padding: 0;
-}
-
-.item-meta ul li{
-    display: inline-block;
-    font-size: 12px;
-    margin-right: 10px;
-    color: #BBB;
-}
-
-.item-meta ul li a{
-    color: #BBB;
-}
-
-.item-meta ul li a:hover{
-    color: #398110;
-}
-
-.item-action ul{
-    list-style: none;
-    padding: 0;
-}
-
-.item-action ul li{
-    display: inline-block;
-    font-size: 12px;
-    color: #BBB;
-}
-
-.item-badge.featured-ads,.item-badge-grid.featured-ads{
-    background: #5cb85c;
-}
-
-.item-badge.hot-ads,.item-badge-grid.hot-ads{
-    background: #d9534f;
 }
 
 .counter{
@@ -425,25 +173,6 @@ a{
     color: #FFF;
     text-align: center;
     text-transform: uppercase;
-}
-
-.item-price-grid{
-    text-align: center;
-     position: relative;
-     margin-left: -5%;
-}
-
-.item-price-grid h3{
-    font-weight: 300;
-    font-size: 100%;
-}
-
-.item-price-grid span{
-    color: #4F8A10;
-    font-size: 70%;
-}
-.item-title h4{
-    font-weight: 600;
 }
 
 .section-header{
@@ -457,19 +186,10 @@ a{
     font-size: 20px;
     font-weight: 700;
 }
-
-@media (max-width:767px) {
-  .footer ul {
-    float: none;
-    padding: 0;
-    text-align: center;
-    width: 100%;
-  }
-
-  .footer ul:last-child {
-    margin-top: 20px;
-  }
+.bodycontainer{
+  margin-top: 9%;
 }
+
 </style>
 
 </template>
