Start a quest page
started the “start a quest page”
still working on it, as well as the project page

--- a/client/templates/projectPage.html
+++ b/client/templates/projectPage.html
@@ -23,33 +23,39 @@
 			<div class="col-md-6 projectVisual">
 				<img src="placeholder-blue.png" alt="..." class="img-responsive">
 				<div class="row">
-					<div class="projectAuthor">
+					<div class="projectAuthor featuredLinks">
 						<br>
-          				<img class="img-author img-circle" src="placeholder-profile.png">
-				        Author
+						<ul>
+				        	<li><i class="fa fa-tag"></i> <a href="">Medical</a> , <a href="">Cancer Research</a></li>
+				        	<li><a href=""><i class="fa fa-map-marker"></i> City</a></li>
+				        </ul>
+
 					</div>
 				</div>
 			</div>
 			<div class="col-md-3 projectInfo">
 				
 				<div class="projectSpecs">
-	              <h1>$23,456</h1>
-	              
+	              <h1 style= "font-family: 'Benton Sans','Helvetica','sans-serif'; font-size: 40px"> $23,456 </h1>
 	              <span>donated of $20,000 goal</span>
 	            </div>
 	            <div class="projectSpecs">
-	              <h1>320</h1>
+	              <h1 style= "font-family: 'Benton Sans','Helvetica','sans-serif'; font-size: 40px"> 320 </h1>
 	              
-	              <p>Supporters</p>
+	              <span>Supporters</span>
 
 	            </div>
 	            <div class="projectSpecs">
-	              <h1>40</h1>
+	              <h1 style= "font-family: 'Benton Sans','Helvetica','sans-serif'; font-size: 40px">40</h1>
 	              
-	              <p>Days Left</p>
+	              <span>Days Left</span>
 	            </div>
 				<br>
 				<a href="" data-toggle="tooltip" data-placement="top" title="Save Favorite" class="btn btn-default btn-lg">Support</a>
+				<hr>
+				
+				<img class="img-author img-circle" src="placeholder-profile.png">   
+					
 			</div>
 		</div>
 	</div>
@@ -59,22 +65,28 @@
 	  font-size: 16px;
 
 	}
+	.container{
+		padding: 4%;
+
+	}
+	.img-author{
+		max-width: 25%;
+	}
+
 	.nav-justified{
 		margin-left: 1%;
 		margin-right: 1%;
 
 	}
-	.projectSpecs{
-      margin-top: 2%;
-  }
+	
   .projectInfo{
-  	padding: 1px;
-      margin-left: 50%;
-      position:absolute;
+  	margin-left: 5%;
+      position:relative;
   }
 
 	.projectVisual img{
 		width: 100%;
 	}
 	</style>
+
 </template>
