--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -16,7 +16,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/discover">Discover</a></li>
-        <li><a href="#">Start a quest</a></li>
+        <li><a href="/Begin">Start a quest</a></li>
         <li><a href="#">About us</a></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
