--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -25,8 +25,7 @@
         </div>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/signup" id="signup">Sign up</a></li>
-        <li><a href="/login">Login</a></li>
+        {{> loginButtons}}
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
